--- a/index.html
+++ b/index.html
@@ -7,10 +7,10 @@
 <body>
     <ul>
         <li>Vagrant</li>
-        <li>Docker</li>
+        <li>Curso de Docker: Crisndo containers sem dor de cabeça.</li>
         <li>Ansible</li>
         <li>Git e Github</li>
-        <li>Integração Contínua: Maturidade e Produtividade no Desenvolvimento de Software</li>
+        <li>Integração Contínua: Maturidade e Produtividade no Desenvolvimento de Software.</li>
         <li>Kubernetes</li>
     </ul>
 </body>
