--- a/index.html
+++ b/index.html
@@ -9,7 +9,7 @@
         <li>Vagrant: Gerenciando máquinas virtuais.</li>
         <li>Curso de Docker: Crisndo containers sem dor de cabeça.</li>
         <li>Ansible</li>
-        <li>Git e Github</li>
+        <li>Git e Githubwfwgsgsg</li>
         <li>Integração Contínua: Maturidade e Produtividade no Desenvolvimento de Software.</li>
         <li>Kubernetes</li>
     </ul>
